--- a/despliegue-api-rest/src/main/resources/application.properties
+++ b/despliegue-api-rest/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=despliegue-api-rest
+spring.datasource.url=jdbc:mysql://localhost:3306/pets?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
