base de datos en la nube

--- a/despliegue-api-rest/src/main/resources/application.properties
+++ b/despliegue-api-rest/src/main/resources/application.properties
@@ -1,8 +1,18 @@
 spring.application.name=despliegue-api-rest
-spring.datasource.url=jdbc:mysql://localhost:3306/pets?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=root
+
+
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/pets?useSSL=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.jpa.show-sql=true
+#spring.jpa.generate-ddl=false
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.url=jdbc:postgresql://ep-tiny-bonus-ad7w19zt-pooler.c-2.us-east-1.aws.neon.tech:5432/pets?sslmode=require&channelBinding=require
+spring.datasource.username=neondb_owner
+spring.datasource.password=npg_YXLl1e5RiPzt
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
-spring.jpa.generate-ddl=false
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
