--- a/despliegue-api-rest/pom.xml
+++ b/despliegue-api-rest/pom.xml
@@ -50,6 +50,11 @@
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.6.0</version> <!-- o la última versión estable -->
+		</dependency>
 	</dependencies>
 
 	<build>
